# pppy

./: .gitignore  CHANGELOG  README.md  __init__.py  ctypesForFortran.py  pppy.py  pppyComp.py  pyproject.toml
doc/: Makefile
doc/source/: conf.py  examples.rst  introduction.rst  library.rst
doc_sphinx/: Makefile
doc_sphinx/source/: conf.py  ctypesForFortran.rst  examples.rst  index.rst  introduction.rst  library.rst  overview.rst
examples/: README
examples/microphy1/: comp_microphy1.py  pppy_ice3ice4.py  pppy_microPhyIce_MNH53.py  pppy_microPhyLima_MNH53.py  pppy_microPhyMNH53_ICE.py  pppy_microPhyMNH53_LIMA.py  pppy_microphyAROME_ICE.py
examples/microphy1/lib/: README
examples/microphy2/: comp_microphy2.py  pppy_microPhyIce_MNH54.py  pppy_microPhyLima_MNH54.py  pppy_microPhyMNH54_ICE.py  pppy_microPhyMNH54_LIMA.py  pppy_microPhyWRF.py
examples/microphy2/lib/: README
examples/old/: pppy_microPhyMNH53_LIMA.py
examples/old_WRF/: pppy_microPhyWRF.py
examples/pyphyex/: Makefile  README  comp_ice_adjust.py  comp_lima.py  comp_lima_adjust.py  comp_microphy.py  comp_sedimentation.py  comp_shallow.py  comp_turb.py  pppy_ice_adjust.py  pppy_lima.py  pppy_lima_adjust.py  pppy_microphy.py  pppy_sedimentation.py  pppy_shallow.py  pppy_turb.py
examples/sedimentation_AROME/: comp_sedimentation_AROME.py  pppy_sedim_AROME.py
examples/sedimentation_AROME/lib/: README
examples/sedimentation_MNH/: comp_sedimentation_MNH.py  pppy_sedim_MNH54.py
examples/test/: Makefile  comp_test.py  pppy_param1.py  pppy_param2.py
src/pppy/: __init__.py  pppy.py  pppyComp.py
(+41 files in other folders)
